# gtm-multi-agent-n8n-crewai

./: PHASE5_KPI_RUBRIC.md  README.md  pyproject.toml
docs/: n8n_workflow_export.json
scripts/: score_gtm_plan.py
src/gtm_crew/: crew.py  main.py
src/gtm_crew/config/: agents.yaml  tasks.yaml
src/gtm_crew/tools/: docs_tool.py  mcp_tools.py
tests/: conftest.py  test_crew_scenarios.py  test_mcp_tools.py
