[project]
name = "gtm_crew"
version = "0.1.0"
description = "gtm_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools[mcp]>=1.14.7",
    "crewai[tools]==1.14.7",
    "mcp>=1.26.0",
]

[project.scripts]
gtm_crew = "gtm_crew.main:run"
run_crew = "gtm_crew.main:run"
train = "gtm_crew.main:train"
replay = "gtm_crew.main:replay"
test = "gtm_crew.main:test"
run_with_trigger = "gtm_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
